[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/main/world/restaurant/Seat.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/world/restaurant/wall-metal.png" type="Texture" id=5]
[ext_resource path="res://assets/world/restaurant/wall-metal-shadow.png" type="Texture" id=7]
[ext_resource path="res://assets/world/shadow-oval-2.png" type="Texture" id=11]
[ext_resource path="res://assets/world/restaurant/wood-pillar.png" type="Texture" id=12]
[ext_resource path="res://assets/world/restaurant/poster2.png" type="Texture" id=13]
[ext_resource path="res://assets/world/restaurant/light.png" type="Texture" id=14]
[ext_resource path="res://assets/world/restaurant/poster1.png" type="Texture" id=15]
[ext_resource path="res://assets/world/restaurant/poster0.png" type="Texture" id=16]
[ext_resource path="res://src/main/world/restaurant/restaurant-scene.gd" type="Script" id=24]

[node name="RestaurantScene" type="Node2D"]
light_mask = 2
script = ExtResource( 24 )

[node name="Floor" type="ColorRect" parent="."]
light_mask = 2
margin_left = -800.0
margin_top = -3.28479
margin_right = 3600.0
margin_bottom = 1005.72
color = Color( 0.596078, 0.45098, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]
light_mask = 2
position = Vector2( 0, -400 )
z_index = 10

[node name="Wall" type="ColorRect" parent="Background"]
light_mask = 2
margin_left = -800.0
margin_top = -258.0
margin_right = 3600.0
margin_bottom = 880.0
color = Color( 0.737255, 0.239216, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light0" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 600, 320 )
texture = ExtResource( 14 )
offset = Vector2( 0, 210 )

[node name="Light1" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 1600, 320 )
texture = ExtResource( 14 )
offset = Vector2( 0, 210 )

[node name="Light2" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 2600, 320 )
texture = ExtResource( 14 )
offset = Vector2( 0, 210 )

[node name="Poster0" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 640, 525 )
texture = ExtResource( 16 )

[node name="Poster1" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 150, 520 )
texture = ExtResource( 15 )

[node name="Poster2" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 1550, 510 )
texture = ExtResource( 13 )

[node name="Poster3" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 2140, 425 )
texture = ExtResource( 16 )

[node name="Poster4" type="Sprite" parent="Background"]
light_mask = 2
position = Vector2( 2600, 560 )
texture = ExtResource( 15 )

[node name="WallMetal" type="TextureRect" parent="Background"]
light_mask = 2
margin_left = -800.0
margin_top = 670.0
margin_right = 3600.0
margin_bottom = 920.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorShadows" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pillar1" type="Sprite" parent="FloorShadows"]
self_modulate = Color( 0.521569, 0.368627, 0.270588, 1 )
light_mask = 2
position = Vector2( 1100, 520 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
offset = Vector2( 0, 50 )

[node name="Pillar2" type="Sprite" parent="FloorShadows"]
self_modulate = Color( 0.521569, 0.368627, 0.270588, 1 )
light_mask = 2
position = Vector2( 3100, 520 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
offset = Vector2( 0, 50 )

[node name="WallMetal" type="Sprite" parent="FloorShadows"]
self_modulate = Color( 0.521569, 0.368627, 0.270588, 1 )
light_mask = 2
position = Vector2( -800, 500 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -35 )
region_enabled = true
region_rect = Rect2( 0, 0, 4400, 80 )

[node name="Pillar1" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 1100, 520 )
z_index = 10
texture = ExtResource( 12 )
offset = Vector2( 0, -550 )

[node name="Pillar2" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 3100, 520 )
z_index = 10
texture = ExtResource( 12 )
offset = Vector2( 0, -550 )

[node name="Seat1" parent="." instance=ExtResource( 2 )]
z_index = 10

[node name="Seat2" parent="." instance=ExtResource( 2 )]
position = Vector2( 1380, 585 )
z_index = 10

[node name="Seat3" parent="." instance=ExtResource( 2 )]
position = Vector2( 2380, 585 )
z_index = 10
[connection signal="food_eaten" from="Seat1/Customer" to="." method="_on_Customer_food_eaten"]
[connection signal="food_eaten" from="Seat2/Customer" to="." method="_on_Customer_food_eaten"]
[connection signal="food_eaten" from="Seat3/Customer" to="." method="_on_Customer_food_eaten"]

[editable path="Seat1"]

[editable path="Seat2"]

[editable path="Seat3"]
